force-app/main/default/objects/TIME_SHEET_HD__x/TIME_SHEET_HD__x.object-meta.xml
<CustomObject>
    <description>TIME_SHEET_HD</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>TIME_SHEET_HD</externalName>
    <label>TIME_SHEET_HD</label>
    <pluralLabel>TIME_SHEET_HD</pluralLabel>
</CustomObject>