force-app/main/default/objects/TIME_SHEET_HD__x/fields/DAY_END_TIME__c.field-meta.xml
<CustomField>
    <fullName>DAY_END_TIME__c</fullName>
    <description>DAY_END_TIME</description>
    <externalDeveloperName>DAY_END_TIME</externalDeveloperName>
    <label>DAY_END_TIME</label>
    <length>5</length>
    <type>Text</type>
</CustomField>