force-app/main/default/objects/TIME_SHEET_HD__x/fields/DAY_START_TIME__c.field-meta.xml
<CustomField>
    <fullName>DAY_START_TIME__c</fullName>
    <description>DAY_START_TIME</description>
    <externalDeveloperName>DAY_START_TIME</externalDeveloperName>
    <label>DAY_START_TIME</label>
    <length>5</length>
    <type>Text</type>
</CustomField>