force-app/main/default/objects/TIME_SHEET_HD__x/fields/LATE_FLG__c.field-meta.xml
<CustomField>
    <fullName>LATE_FLG__c</fullName>
    <description>LATE_FLG</description>
    <externalDeveloperName>LATE_FLG</externalDeveloperName>
    <label>LATE_FLG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>