force-app/main/default/objects/TIME_SHEET_HD__x/fields/LEV_TYPE__c.field-meta.xml
<CustomField>
    <fullName>LEV_TYPE__c</fullName>
    <description>LEV_TYPE</description>
    <externalDeveloperName>LEV_TYPE</externalDeveloperName>
    <label>LEV_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>