force-app/main/default/objects/TIME_SHEET_HD__x/fields/PROCESS_DATE__c.field-meta.xml
<CustomField>
    <fullName>PROCESS_DATE__c</fullName>
    <description>PROCESS_DATE</description>
    <externalDeveloperName>PROCESS_DATE</externalDeveloperName>
    <label>PROCESS_DATE</label>
    <type>DateTime</type>
</CustomField>