force-app/main/default/objects/TIME_SHEET_HD__x/fields/PROCESS_FALG__c.field-meta.xml
<CustomField>
    <fullName>PROCESS_FALG__c</fullName>
    <description>PROCESS_FALG</description>
    <externalDeveloperName>PROCESS_FALG</externalDeveloperName>
    <label>PROCESS_FALG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>