force-app/main/default/objects/TIME_SHEET_HD__x/fields/REJECT_RESION__c.field-meta.xml
<CustomField>
    <fullName>REJECT_RESION__c</fullName>
    <description>REJECT_RESION</description>
    <externalDeveloperName>REJECT_RESION</externalDeveloperName>
    <label>REJECT_RESION</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>