force-app/main/default/objects/TIME_SHEET_HD__x/fields/TOTAL_MNS__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_MNS__c</fullName>
    <description>TOTAL_MNS</description>
    <externalDeveloperName>TOTAL_MNS</externalDeveloperName>
    <label>TOTAL_MNS</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>